<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity"
    android:layout_margin="18dp">

    <!-- Name field -->
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textCapWords"
        />

    <!-- Label -->
    <TextView
        android:text="@string/type"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Book type drop-down spinner -->
    <Spinner
        android:id="@+id/spinner_type"
        android:layout_height="48dp"
        android:layout_width="wrap_content"
        android:paddingRight="16dp"
        android:spinnerMode="dropdown"/>

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_price"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        />


    <!-- Quantity field -->
    <EditText
        android:id="@+id/edit_quantity"
        android:hint="@string/quantity"
        android:inputType="number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        />

    <!-- Quantity field -->
    <EditText
        android:id="@+id/edit_supplier_name"
        android:hint="@string/supplier_name"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!-- Quantity field -->
    <EditText
        android:id="@+id/edit_supplier_phone"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>

